[gd_scene load_steps=7 format=3 uid="uid://dg3a1ajlah5l"]

[ext_resource type="Script" uid="uid://cp37fguvqhpc5" path="res://scripts/end_screen.gd" id="1_abjgy"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_my301"]
bg_color = Color(0.0627451, 0.0627451, 0.0627451, 1)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_abjgy"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_xu7hh"]
bg_color = Color(0.791999, 0.791999, 0.791999, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16
corner_detail = 4
shadow_size = 2

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_pmjk2"]
bg_color = Color(0.440979, 0.440979, 0.440979, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16
corner_detail = 4
shadow_size = 2

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_d75mr"]
bg_color = Color(1, 1, 1, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16
shadow_size = 2

[node name="EndScreen" type="CanvasLayer"]
script = ExtResource("1_abjgy")

[node name="Panel" type="Panel" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_my301")

[node name="Rows" type="VBoxContainer" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -80.0
offset_top = -12.0
offset_right = 71.0
offset_bottom = 67.0
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 4
theme_override_constants/separation = 5
alignment = 1

[node name="Try Again" type="Button" parent="Rows"]
layout_mode = 2
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 30
theme_override_styles/focus = SubResource("StyleBoxEmpty_abjgy")
theme_override_styles/hover = SubResource("StyleBoxFlat_xu7hh")
theme_override_styles/pressed = SubResource("StyleBoxFlat_pmjk2")
theme_override_styles/normal = SubResource("StyleBoxFlat_d75mr")
text = "Reset
"

[node name="Exit" type="Button" parent="Rows"]
layout_mode = 2
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 30
theme_override_styles/focus = SubResource("StyleBoxEmpty_abjgy")
theme_override_styles/hover = SubResource("StyleBoxFlat_xu7hh")
theme_override_styles/pressed = SubResource("StyleBoxFlat_pmjk2")
theme_override_styles/normal = SubResource("StyleBoxFlat_d75mr")
text = "Quit
"

[node name="GameOver" type="Label" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -176.0
offset_top = -140.0
offset_right = 175.0
offset_bottom = -71.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/shadow_offset_x = 2
theme_override_constants/shadow_offset_y = 0
theme_override_constants/outline_size = 4
theme_override_constants/shadow_outline_size = 2
theme_override_font_sizes/font_size = 50
text = "Game Over"
horizontal_alignment = 1

[node name="MedalText" type="Label" parent="."]
offset_left = 480.0
offset_top = 264.0
offset_right = 676.0
offset_bottom = 287.0

[connection signal="pressed" from="Rows/Try Again" to="." method="_on_try_again_pressed"]
[connection signal="pressed" from="Rows/Exit" to="." method="_on_exit_pressed"]
